log/build_2026-02-07_01-02-36/pkg_helloworld_py/stdout_stderr.log
running egg_info
creating ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info
writing ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/PKG-INFO
writing dependency_links to ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/dependency_links.txt
writing entry points to ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/entry_points.txt
writing requirements to ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/requires.txt
writing top-level names to ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/top_level.txt
writing manifest file '../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/SOURCES.txt'
reading manifest file '../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/SOURCES.txt'
writing manifest file '../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info/SOURCES.txt'
running build
running build_py
creating /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build
creating /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib
creating /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib/pkg_helloworld_py
copying pkg_helloworld_py/__init__.py -> /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib/pkg_helloworld_py
copying pkg_helloworld_py/helloworld.py -> /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib/pkg_helloworld_py
running install
running install_lib
creating /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py
copying /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib/pkg_helloworld_py/__init__.py -> /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py
copying /var/robotic/yahboomcar_ws/build/pkg_helloworld_py/build/lib/pkg_helloworld_py/helloworld.py -> /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py
byte-compiling /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py/__init__.py to __init__.cpython-310.pyc
byte-compiling /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py/helloworld.py to helloworld.cpython-310.pyc
running install_data
  File "/var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py/helloworld.py", line 4
    ​
    ^
SyntaxError: invalid non-printable character U+200B

creating /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/share/ament_index
creating /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/share/ament_index/resource_index
creating /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/share/ament_index/resource_index/packages
copying resource/pkg_helloworld_py -> /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/share/ament_index/resource_index/packages
copying package.xml -> /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/share/pkg_helloworld_py
running install_egg_info
Copying ../../build/pkg_helloworld_py/pkg_helloworld_py.egg-info to /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/python3.10/site-packages/pkg_helloworld_py-0.0.0-py3.10.egg-info
running install_scripts
Installing helloworld script to /var/robotic/yahboomcar_ws/install/pkg_helloworld_py/lib/pkg_helloworld_py
writing list of installed files to '/var/robotic/yahboomcar_ws/build/pkg_helloworld_py/install.log'
